2007-01-10  Brian Pepple  <bpepple@fedoraproject.org>

	* data/icons/hicolor/48x48/apps/Makefile.am (icondir):
	* data/icons/hicolor/128x128/apps/Makefile.am (icondir):
	  - Install application icon into system hicolor theme. Bug #384160

2007-01-10  David Trowbridge  <trowbrds@gmail.com>

	* configure.ac:
	  - Bump to 0.17svn

==================== 0.16 ====================

2007-01-09  David Trowbridge <trowbrds@gmail.com>

	* plugins/notification/Makefile.am:
	  - Include preferences glade file in EXTRA_DIST

	* help/C/xchat-gnome.xml:
	  - Remove <application> tags from "app" element, since everywhere
	    that needs it already has the tag, and it was causing an xmllint
	    error.

2007-01-09  David Trowbridge <trowbrds@gmail.com>

	* configure.ac:
	* NEWS:
	  - Bump version to 0.16

2006-12-15  Guillaume Desmottes <cass@skynet.be>

	* NEWS:
	  - Add some words in NEWS about our new documentations

2006-12-18  Christian Persch  <chpe@cvs.gnome.org>

	* src/fe-gnome/conversation-panel.c: (copy_text):
	  - Set PRIMARY too on CopyLinkAddress. Bug #386766.

2006-12-15  Guillaume Desmottes <cass@skynet.be>

	* src/fe-gnome/navigation-tree.c:
	  - Fix regressions with autojoin and autoconnect.
	    Bug #385515.

2006-12-15  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/navigation-tree.c:
	  - This time I really mean it.

2006-12-15  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/navigation-tree.c:
	  - Actually fix hilighting.  For real this time.

2006-12-14  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/fe-gnome.c:
	* src/fe-gnome/navigation-tree.c:
	  - Fix a couple navtree-related regressions with hilighting and
	    the userlist. Bug #385515.

2006-12-10  David Trowbridge <trowbrds@gmail.com>

	* configure.ac:
	* autogen.sh:
	  - Bump the minimum required version of autoconf to 2.60, since it's
	    the minimum required version :)

2006-12-10  Christian Persch  <chpe@cvs.gnome.org>

	* data/icons/hicolor/128x128/apps/Makefile.am: