@@ -1,3 +1,10 @@
+2007-01-19  Michel Dänzer <daenzer@debian.org>
+
+	* src/fe-gnome/xtext.c:
+	  - When the MIT-SHM extension doesn't support shared pixmaps, don't
+	    use XShmCreatePixmap but use XShmPutImage instead of XPutImage.
+	    Bug #398315.
+
 2007-01-10  Brian Pepple  <bpepple@fedoraproject.org>
 
 	* data/icons/hicolor/48x48/apps/Makefile.am (icondir):
